<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#BFBFBF">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="#FFFFFF">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
              android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/PrimaryColor" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="#FFFFFF"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Fecha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/fecha"

                        android:layout_gravity="right"
                        android:layout_marginEnd="10dp"
                        android:textColor="#F32121"
                        android:textStyle="bold"
                        android:textSize="30sp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:background="@color/PrimaryColor" />

                    <TextView
                        android:id="@+id/cCliente"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/clave_cliente"
                        android:textStyle="bold"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/Nombre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="5dp"
                        android:textStyle="bold"
                        android:text="@string/nombre"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/Actividad"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/actividad"
                        android:textColor="#787777"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/Estatus"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/estatus"
                        android:textColor="#787777"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/Comentario"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="Comentario"
                        android:textColor="#787777"
                        android:textSize="13sp" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:background="@color/PrimaryColor" />
                </LinearLayout>


            </LinearLayout>



            <com.google.android.material.button.MaterialButton

                android:id="@+id/btnSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="10dp"
                android:background="@drawable/roundbutton"
                android:backgroundTint="@color/cardview_dark_background"
                android:text="@string/cambiar_status"
                android:padding="5dp"
                android:textSize="14sp"
                android:layout_gravity="right"
                android:onClick="statusAgenda"
                android:textColor="#FFFFFF" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/PrimaryColor" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/cardview_light_background" />

</LinearLayout>



