<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#BFBFBF"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/PrimaryColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Parte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/parte"
                    android:textSize="30sp"
                    android:textColor="#F32121"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/ID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="ID"
                        android:textColor="#FFFFFF"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/productoImag"
                    android:layout_width="140dp"
                    android:layout_height="113dp"
                    android:padding="16dp"
                    android:src="@drawable/aboutlogo" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Descr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="1dp"
                        android:text="DESCRIPCION"
                        android:textColor="#000000"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <TextView
                            android:id="@+id/Cantidad"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cantidad"
                            android:textColor="#000000"
                            android:textSize="10sp"
                            android:textStyle="bold" />


                        <TextView
                            android:id="@+id/Unidad"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/unidad"
                            android:textColor="#000000"
                            android:textSize="10sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/Disponi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/disponibilidad"
                            android:textColor="#000000"
                            android:textSize="10dp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/Desc1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:text="@string/descuento"
                            android:textColor="#000000"
                            android:textSize="10sp"
                            android:textStyle="bold" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/Precio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginEnd="20dp"
                            android:layout_marginBottom="5dp"
                            android:text="PRECIO"
                            android:textColor="#000000"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/Monto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginEnd="20dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/monto"
                            android:textColor="#000000"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/PrimaryColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRest"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"

                    android:background="@drawable/roundbutton"
                    android:backgroundTint="@color/PrimaryColor"
                    android:onClick="Delete"
                    android:text="@string/eliminar"
                    android:textSize="14sp"
                    android:textColor="#FFFFFF" />



                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnActualizar"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/roundbutton"
                        android:backgroundTint="@color/cardview_dark_background"
                        android:text="@string/modificar"
                        android:textSize="14sp"
                        android:onClick="Actualizar"
                        android:textColor="#FFFFFF"
                        tools:ignore="UsingOnClickInXml" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/cardview_dark_background" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>




